--- a/app/src/main/res/menu/menu_todo_options.xml
+++ b/app/src/main/res/menu/menu_todo_options.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/action_delete"
-        android:title="Delete" />
+        android:id="@+id/action_reminder"
+        android:title="@string/app_name" />
+    <item
+        android:id="@+id/action_hide"
+        android:title="Hide" />
+    <item
+        android:id="@+id/action_place_home_screen"
+        android:title="Place on Home Screen" />
     <item
         android:id="@+id/action_move_to"
         android:title="Move To" />
+    <item
+        android:id="@+id/action_delete"
+        android:title="Delete" />
+
 </menu>
