--- a/app/src/main/res/layout/fragment_todo_form.xml
+++ b/app/src/main/res/layout/fragment_todo_form.xml
@@ -179,19 +179,31 @@
 
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/etContent"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:background="@null"
-        android:fontFamily="@font/google_sans"
-        android:gravity="top|start"
-        android:hint="Start typing"
-        android:inputType="textMultiLine"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/infoLayout" />
+        android:fillViewport="true"  app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/infoLayout">
+
+        <EditText
+            android:id="@+id/etContent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:fontFamily="@font/google_sans"
+            android:gravity="top|start"
+            android:hint="Start typing"
+            android:importantForAutofill="no"
+            android:inputType="textMultiLine|textCapSentences"
+            android:overScrollMode="ifContentScrolls"
+            android:scrollbarStyle="insideOverlay"
+            android:scrollbars="vertical"
+            android:nestedScrollingEnabled="true"
+            android:lineSpacingExtra="10sp"/>
+
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
